backend/tests/models/snapshots/can_validate_model@users.snap
---
source: tests/models/users.rs
expression: res
---
Err(
    Custom(
        "{\"email\":[{\"code\":\"email\",\"message\":\"Informe um e-mail válido.\"}],\"name\":[{\"code\":\"length\",\"message\":\"O nome precisa ter ao menos 2 caracteres.\"}]}",
    ),
)
